[package]
name = "pico-climate"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

panic-probe = { version = "1", features = ["print-defmt"] }

embassy-executor = { version = "0.8.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-rp = { version = "0.7.0", features = ["time-driver", "rp2040", "critical-section-impl", "defmt"] }
embassy-net = { version = "0.7.0", features = ["tcp", "udp", "dhcpv4", "dhcpv4-hostname", "dns", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
embassy-sync = "0.7"
defmt = "1.0"
defmt-rtt = "1.0"
cyw43 = { version = "0.4.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.6.0", features = ["defmt"] }
static_cell = "2.1.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
rand_core = "0.9.3"
heapless = "0.8.0"
picoserve = { version = "0.16.0", features = ["embassy"] }
# edge-mdns = { version = "0.6.1", features = ["defmt"]}
# edge-nal-std = {version = "0.5.0"}

#cyw43 = "0.1.0"
#cyw43-pio = "0.1.0"
#embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }

[profile.release]
debug = 2

[profile.dev]
debug = 2
opt-level = "z"
